[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Texturas/Inimigos/Inimigo 1/Arcade - Legend of Heroes - Cheng.png" type="Texture" id=1]
[ext_resource path="res://src/scripts/Inimigos/Curupira.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 23.5, 34.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 297.5, 116.625 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 23, 38.25 )

[node name="Curupira" type="Node2D"]
position = Vector2( 475, 269 )

[node name="Curupira" type="KinematicBody2D" parent="."]
script = ExtResource( 2 )
nome_do_inimigo = "Curupira"

[node name="Sprite" type="Sprite" parent="Curupira"]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 4, 5, 59, 76 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Curupira"]
position = Vector2( -0.5, 0.5 )
shape = SubResource( 1 )

[node name="Zona de corrida" type="Area2D" parent="Curupira"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Curupira/Zona de corrida"]
position = Vector2( -0.5, -3 )
shape = SubResource( 2 )

[node name="Chute" type="Area2D" parent="Curupira"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Curupira/Chute"]
position = Vector2( 25, -1.75 )
shape = SubResource( 3 )

[connection signal="body_entered" from="Curupira/Zona de corrida" to="Curupira" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Curupira/Zona de corrida" to="Curupira" method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Curupira/Chute" to="Curupira" method="_on_Chute_body_entered"]
